# kv260-medical-image-pipeline

./: LICENSE  README.md
ai_segmentation/code2/: README.md  requirements.txt
ai_segmentation/code2/dataset/: datasets.py
ai_segmentation/code2/networks/: UNet.py  UNet_parts.py  build_model.py  evaluate.py  utils.py
ai_segmentation/code2/scripts/: run_eval.sh  run_inference.sh  run_quant.sh  run_train.sh
ai_segmentation/code2/test/: predict.py  (+2 more)
data_preprocessing/: README.md
data_preprocessing/hls_src/: Filter2D.cpp  Filter2D.h
data_preprocessing/hls_testbench/: Filter2D_tb.cpp
data_preprocessing/vivado_design/: Filter.tcl  ultra.tcl
jupyter_lab/ai_liver/: 2dunet_liver.xmodel  batch_liver_npy_segmentation.ipynb  ct_3d_reconstruction_clean.ipynb  liver_segmentation_dpu.ipynb
jupyter_lab/preprocess/: pre2.ipynb  preprocess.ipynb  transform_nii_npy.ipynb
jupyter_lab/reconstruction/: 3D_Reconstruction.ipynb  plotly_vtk_render.ipynb
marching_cubes/: CLAUDE.md  README.md  out.vtk
marching_cubes/src/: main.cpp  marching_cubes.h  npy_reader.cpp  vtk_writer.h
marching_cubes_c/: CLAUDE.md  CMakeLists.txt  README.md
marching_cubes_c/src/: main.cpp  marching_cubes.cpp  npy_reader.h  vtk_writer.cpp
marching_cubes_hls/: README.md
marching_cubes_hls/hls_src/: marching_cubes_hls.cpp  marching_cubes_hls.h  mc_tables.cpp  mc_tables.h
marching_cubes_hls/hls_testbench/: npy_reader.cpp  npy_reader.h  test_marching_cubes_hls.cpp  vtk_writer.cpp  vtk_writer.h
marching_cubes_hls/vivado_design/: design_1.tcl
marching_cubes_hls/vtk_render/: pyvista_render.ipynb
(+8 files in other folders)
